--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Normal Physical Exam</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- Custom styles for this template -->
+    <link href="css/starter-template.css" rel="stylesheet">
   </head>
   <body>
 
@@ -22,23 +23,27 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Normal PE</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li ><a href="#">Templates for normal physical exam findings</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
       
-  <div class="container">      
-      
-    <h1>Normal Physical Exam Findings</h1>
 
+
+
+  <div class="container">      
+       <div class="starter-template"> 
+
+
+      <h1>Normal Physical Exam Findings</h1>
+
+<br>
 Physical Examination:
 <br>
 General: The patient is alert and oriented and in no apparent distress
@@ -61,9 +66,19 @@ Skin: No lesions or rashes
 <br>
 
   </div>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- normalPE -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-1535222980530127"
+     data-ad-slot="5734997055"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
