--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@ Neuro:  Grossly nonfocal.
 Skin: No lesions or rashes   
 <br>
 
-  </div>
+<img style="height:100px;" src="teddy.jpg">
+<img style="height:100px;" src="steth.jpg">
+
+
       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- normalPE -->
 <ins class="adsbygoogle"
@@ -77,6 +80,7 @@ Skin: No lesions or rashes
 </script>
 
 
+  </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
