--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ Neuro:  Grossly nonfocal.
 Skin: No lesions or rashes   
 <br>
 
+<p>Designed to be consistent with many normal findings in physical exam documentation as might be seen in EHR systems such as Epic, Practice Fusion, eClinicalWorks, NextGen Healthcare, and Cerner.</p>
+
 <img style="height:100px;" src="teddy.jpg">
 <img style="height:100px;" src="steth.jpg">
 
@@ -98,4 +100,4 @@ Skin: No lesions or rashes
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
-</html>
+</html>                                               
